@@ -16,12 +16,20 @@ public class Floor {
     public Passanger CreatePassenger(Building building){
         Random random = new Random();
 
-        int destinationNumber = random.nextInt(building.getFloorList().size() -1);
+        int destinationNumber = random.nextInt(building.getFloorList().size() - 1);
         Floor destinationFloor = building.getFloorList().stream().filter(floor -> floor.floorNumber == destinationNumber)
                 .collect(Collectors.toList()).get(0);
 
+        int currentFloorNumber;
+        do {
+            currentFloorNumber = random.nextInt(building.getFloorList().size() - 1);
+        } while (currentFloorNumber == destinationNumber);
+
+        Floor currentFloor = building.getFloorList().get(currentFloorNumber);
+
         int weight = random.nextInt(50) + 50;
-        return new Passanger(1, destinationFloor, weight);
+
+        return new Passanger(1, destinationFloor, weight, currentFloor);
     }
 
     private Lift ChooseLift(){
@@ -31,9 +39,11 @@ public class Floor {
         int min = first.getValue().size();
 
         for(var temp : queue.entrySet()) {
-            if(min > temp.getValue().size()){
-                min = temp.getValue().size();
-                lift = temp.getKey();
+            if(!temp.getKey().isMoving()) {
+                if (min > temp.getValue().size()) {
+                    min = temp.getValue().size();
+                    lift = temp.getKey();
+                }
             }
         }
 
@@ -53,19 +63,23 @@ public class Floor {
         return queue;
     }
 
-    public void RemovePassLift(Lift l, Passanger passanger){
-         var temp = l.getLiftPassangers().stream().toList();
-         temp.remove
-        l.setCurrentWeight(l.getCurrentWeight() - passanger.getWeight());
+    public void RemovePassLift(Lift l, Floor floor){
+         ArrayList<Passanger> temp = l.getLiftPassengers();
+         var outPassengers = temp.stream().filter(passenger -> passenger.getCurrentFloor() == floor)
+                 .collect(Collectors.toList());
+
+         temp.removeAll(outPassengers);
+
+         l.setLiftPassengers(temp);
     }
     // посадка пасажира з черги у певний ліфт
     public void AddPassLift(Lift l){
         while (!queue.get(l).isEmpty() &&
-                l.getMaxPeopleCount() > l.getLiftPassangers().stream().count() &&
-                l.getMaxWeight() > l.getCurrentWeight()-queue.get(l).getFirst().getWeight()) {
+                l.getMaxPeopleCount() > l.getLiftPassengers().size() &&
+                l.getMaxWeight() > l.getCurrentWeight() - queue.get(l).getFirst().getWeight()) {
             var pas = queue.get(l).getFirst();
-            l.getLiftPassangers().add(pas);
-            l.setCurrentWeight((int) (l.getCurrentWeight()+pas.getWeight()));
+            l.getLiftPassengers().add(pas);
+            l.setCurrentWeight(l.getCurrentWeight() + pas.getWeight());
             queue.get(l).removeFirst();
         }
     }
